--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@
     justify-content: center;
     align-items: center;
 }
-.login-page-left{
+.login-page-img-left{
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
