--- a/style.css
+++ b/style.css
@@ -89,8 +89,6 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
-
-    height: 500px;
 }
 .page-text h3{
     color: orangered;
@@ -103,6 +101,7 @@
     height: 500px;
     align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 .end-text{
@@ -110,6 +109,11 @@
     text-align: center;
     width: 50%;
     height: 30%;
+}
+.end-button{
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
 }
 .end-button-one{
     width: 200px;
@@ -130,12 +134,17 @@
     border-radius: 10px;
     border: none ;
 }
+.end-button-three{
+    display: none;
+}
 .contact{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
- 
+.end-logo{
+    display: block;
+}
 .fa-twitter{
     color: orangered;
 }
@@ -164,18 +173,19 @@
 
     .home{
         background-image: none;
-        height: 600px;
     }
     .home-text{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
         color:black;
     }
+    .home-button{
+        height: 90%;
+    }
     .home-button-one{
-        width: 200px;
-        height: 40px;
+        width: 150px;
+        height: 50px;
         background-color: orangered;
         font-size: large;
         font-weight: bold;
@@ -184,13 +194,12 @@
         border: none;
     }
     .home-button-two{
-        width: 200px;
-        height: 40px;
+        width: 150px;
+        height: 50px;
         font-size: large;
         font-weight: bold;
-        color: orangered;
         border-radius: 15px;
-        border: none ;
+        border: 2px solid orangered ;
     }
     .home-img img{
         width: 40%;
@@ -205,5 +214,77 @@
         left: 30px;
         width: 30%;
         height: 40%;
+    }
+    .login-page{
+        flex-direction: column-reverse;
+        align-items: center;
+        height: 600px;
+        text-align: center;
+    }
+    .login-page-img-left{
+        flex-direction: column-reverse;
+        align-items: center;
+        height: 600px;
+        text-align: center;
+    }
+    .page-img img{
+        height: 400px;
+    }
+    .page-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .page-text h3{
+        color: orangered;
+    }
+    .page-text p{
+        color: gray;
+    }
+
+    .end{
+        background-color: #252B42;
+        background-image: none;
+    }
+    .end-button{
+       display: flex;
+       align-items: center;
+       justify-content: space-around;
+       height: 20%;
+       width: 70%;
+    }
+    .end-button-one{
+        width: 150px;
+        height: 50px;
+        background-color: orangered;
+        font-size: large;
+        font-weight: bold;
+        color: white;
+        border-radius: 10px;
+        border: none;
+    }
+    .end-button-two{
+        display: none;
+    }
+    .end-button-three{
+        background-color:#252B42;
+        display: block;
+        width: 150px;
+        height: 50px;
+        font-size: large;
+        font-weight: bold;
+        color: orangered;
+        border-radius: 10px;
+        border: 2px solid white ;
+    }
+    .contact{
+        display: flex;
+        flex-direction: column;
+        border: 2px solid red;
+        justify-content: center;
+    }
+    .end-logo{
+        display: none;
     }
 }
